--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -14,7 +14,8 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     HaskellRoad.GS
+                       Exercise.Chap1
   build-depends:       base >=4.6
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall -O2
+  ghc-options:         -Wall -O2 -fno-warn-type-defaults
