--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -14,6 +14,7 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     HaskellRoad.GS
+                       HaskellRoad.TAMO
                        Exercise.Chap1
   build-depends:       base >=4.6
   hs-source-dirs:      src
