--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -16,6 +16,7 @@ library
   exposed-modules:     HaskellRoad.GS
                        HaskellRoad.TAMO
                        Exercise.Chap1
+                       Exercise.Chap2
   build-depends:       base >=4.6
   hs-source-dirs:      src
   default-language:    Haskell2010
