--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -17,11 +17,16 @@ library
                        HaskellRoad.TAMO
                        HaskellRoad.TUOLP
                        HaskellRoad.STAL
-                       HaskellRoad.DB
+                       HaskellRoad.SetEq
+                       HaskellRoad.Hierarchy
+                       HaskellRoad.REL
+                       HaskellRoad.SetOrd
                        Exercise.Chap1
                        Exercise.Chap2
                        Exercise.Chap3
                        Exercise.Chap4
+                       Exercise.Chap5
+  other-modules:       HaskellRoad.DB
   build-depends:       base >=4.6
   hs-source-dirs:      src
   default-language:    Haskell2010
