--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -32,6 +32,7 @@ library
                        HaskellRoad.SetEq
                        HaskellRoad.Hierarchy
                        HaskellRoad.SetOrd
+                       HaskellRoad.Nats
   build-depends:       base >=4.6
   hs-source-dirs:      src
   default-language:    Haskell2010
