--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -22,6 +22,7 @@ library
                        HaskellRoad.IAR
                        HaskellRoad.WWN
                        HaskellRoad.POL
+                       HaskellRoad.COR
                        Exercise.Chap1
                        Exercise.Chap2
                        Exercise.Chap3
@@ -30,12 +31,14 @@ library
                        Exercise.Chap6
                        Exercise.Chap7
                        Exercise.Chap8
+                       Exercise.Chap10
   other-modules:       HaskellRoad.DB
                        HaskellRoad.SetEq
                        HaskellRoad.Hierarchy
                        HaskellRoad.SetOrd
                        HaskellRoad.Nats
+                       HaskellRoad.Polynomials
   build-depends:       base >=4.6
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall -O2 -fno-warn-type-defaults
+  ghc-options:         -Wall -O2 -fno-warn-type-defaults -fno-warn-orphans
