--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -38,7 +38,8 @@ library
                        HaskellRoad.SetOrd
                        HaskellRoad.Nats
                        HaskellRoad.Polynomials
-  build-depends:       base >=4.6
+  build-depends:       base >=4.7,
+                       random >=1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2 -fno-warn-type-defaults -fno-warn-orphans
