--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -38,6 +38,7 @@ library
                        HaskellRoad.SetOrd
                        HaskellRoad.Nats
                        HaskellRoad.Polynomials
+                       HaskellRoad.PowerSeries
   build-depends:       base >=4.7,
                        random >=1.1
   hs-source-dirs:      src
