--- a/haskell-road.cabal
+++ b/haskell-road.cabal
@@ -23,6 +23,7 @@ library
                        HaskellRoad.WWN
                        HaskellRoad.POL
                        HaskellRoad.COR
+                       HaskellRoad.FAIS
                        Exercise.Chap1
                        Exercise.Chap2
                        Exercise.Chap3
@@ -43,4 +44,4 @@ library
                        random >=1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall -O2 -fno-warn-type-defaults -fno-warn-orphans
+  ghc-options:         -Wall -O2 -fno-warn-type-defaults -fno-warn-orphans -fno-warn-incomplete-patterns
